--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,22 +5,25 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fullcalendar/core": "^6.1.1",
-    "@fullcalendar/daygrid": "^6.1.1",
-    "@fullcalendar/interaction": "^6.1.1",
-    "@fullcalendar/react": "^6.1.2",
-    "@fullcalendar/timegrid": "^6.1.1",
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.4",
+    "@fullcalendar/react": "^6.1.4",
+    "@fullcalendar/timegrid": "^6.1.4",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.7",
+    "@mui/material": "^5.11.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
-    "mongodb": "^5.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
     "npm-check": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "registry.npmjs.org": "^1.0.1",
     "web-vitals": "^3.1.1"
