--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cron": "^2.2.0",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0"
