--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@fullcalendar/timegrid": "^6.1.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^5.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "mongodb": "^5.0.0",
     "npm-check": "^6.0.1",
